--- a/particles/src/styles/main.css
+++ b/particles/src/styles/main.css
@@ -1,7 +1,7 @@
 body {
-  background-color: cyan;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
 
 * {
@@ -10,8 +10,21 @@ body {
   box-sizing: border-box;
 }
 
-#canvas {
+-#canvas {
   position: absolute;
   width: 100%;
   height: 100%;
+}
+
+h1 {
+  top: 50%;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  width: 528px;
+  padding: 50px;
+  height: auto;
+  background-color: rgb(255 255 255 / 50%);
+  backdrop-filter: blur(4px);
+  position: absolute;
+  border-radius: 50px;
 }
